--- a/_layouts/hello-default.html
+++ b/_layouts/hello-default.html
@@ -56,7 +56,7 @@
     <!-- HEADER -->		
     <header id="header">
       <h1 id="logo" style="text-transform:lowercase">
-        <a href="/">an NJIT project</a></h1>
+        <a href="/">there's no place like home</a></h1>
       <nav id="nav">
         <ul>
           <li style="text-transform:lowercase"><a href="{{ page.page_url }}/#about">about</a></li>
